--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -18,3 +18,4 @@ Temporary commit content 194
 Temporary commit content 199
 Temporary commit content 220
 Temporary commit content 231
+Temporary commit content 252
