--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -135,3 +135,4 @@ Temporary commit content 1722
 Temporary commit content 1727
 Temporary commit content 1746
 Temporary commit content 1767
+Temporary commit content 1772
