--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -95,3 +95,4 @@ Temporary commit content 1167
 Temporary commit content 1184
 Temporary commit content 1221
 Temporary commit content 1231
+Temporary commit content 1232
