--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -44,3 +44,4 @@ Temporary commit content 475
 Temporary commit content 482
 Temporary commit content 489
 Temporary commit content 490
+Temporary commit content 524
