--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -212,3 +212,4 @@ Temporary commit content 2760
 Temporary commit content 2761
 Temporary commit content 2769
 Temporary commit content 2770
+Temporary commit content 2778
