--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -103,3 +103,4 @@ Temporary commit content 1262
 Temporary commit content 1273
 Temporary commit content 1277
 Temporary commit content 1290
+Temporary commit content 1298
